--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<head>
+<style>details {display: inline;}</style>
+</head>
+<body>
 <details>
 <summary>About this page</summary>
 
@@ -14,7 +18,7 @@
 <br>I've come across some aphoristic expressions of the form "competition breeds innovation". My best explanation for this rhetoric would be an underlying assumption that competition were a source of motivation for its participants.
 <br>However, the very dynamics of a competition mean that the focus is not on achieving the best result, but on achieving a better result than others. This incentivizes all tactics sabotaging the results of others, f.e. by misinformation or direct intervention with their progress.
 <br>It also directly disincentivizes actions that would help others, such as sharing solutions (even in part, or just the general experience gained during the competition).
-<br>While the competition's rules may still pick <details><summary>the "best" solution provided by any one participant</summary> (- and even this alignment needs to be independently ensured, f.e. take socio-economic factors influencing consumers' decisions -)</details>, any such solution will (in my eyes) quite obviously fall short of the solution that could have been achieved in a positive, cooperative environment: best_coop = best_comp + all improvements the other competitors could have provided to it.
+<br>While the competition's rules may still pick <details><summary>the "best" solution provided by any one participant</summary> (- and even this alignment needs to be independently ensured, f.e. take socio-economic factors influencing consumers' decisions -)</details>, any such solution will quite obviously fall short of the solution that could have been achieved in a positive, cooperative environment: best_coop = best_comp + all improvements the other competitors could have provided to it.
 <br>
 <br>For completeness, I'll list the potential benefits (that come to my mind right now) a competitive environment may incidentally provide in a given scenario:
 <ol>
@@ -35,3 +39,4 @@ A per-submission result-oriented reward structure is easier to implement for a c
 </li>
 </ol>
 </details>
+</body>
