--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <head>
-<style>details {display: inline;}</style>
+<style>details {display: inline} summary {display: inline list-item}</style>
 </head>
 <body>
 <details>
 <summary>About this page</summary>
-
+<br>
 <br>This is a temporary way for me to share ideas.
 <br>I already have an idea for a different medium, which would be less linear, and not just one-directional. But for now this will do.
 </details>
@@ -12,7 +12,7 @@
 <br>
 <details>
 <summary>Cooperation leads to better results than competition.</summary>
-
+<br>
 <br>I'm convinced that the result achieved in cooperation should in most cases surpass the result achieved in competition.
 <br>
 <br>I've come across some aphoristic expressions of the form "competition breeds innovation". My best explanation for this rhetoric would be an underlying assumption that competition were a source of motivation for its participants.
