--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ A per-submission result-oriented reward structure is easier to implement for a c
 <br>On the other hand, those rewards are allocated away from other participants, meaning it disincentivizes less-invested participants.
 <br>To me this seems to be a tradeoff between having fewer, heavier-invested participants vs having more, more-lightly-invested participants. (Note that the latter can be much more valuable for a cooperative setting than in a competitive one.)
 <br>
-<br>It's also important to point out how this entire point revolves around external rewards, which are orthogonal to the intrinsic reward of achieving the best end result.
+<br>It's also interesting how this entire second point revolves around external rewards, which are orthogonal to the intrinsic reward of achieving the best end result.
 <br>Additionally, this only works as a motivation as long as the participants with the best solution(s) are being pressured by other participants - it doesn't incentivize any effort beyond achieving the reward structure's highest payout.
 </li>
 </ol>
