--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <li>
 By reduced sharing of information, participants are required to re-invest efforts across the same sub-problems. This gives the opportunity of arriving at different solutions, which may differ in quality.
 <br>In direct contrast, note how this re-invested effort is drained here instead of being contributed to directly improving someone else's solution.
-<br>If we assume a sub-problem's solution quality to be random, we are randomly sampling a mix of qualities by participant. Meanwhile, in a cooperative environment, we would be free to pick the best solution <details><summary>for each sub-problem</summary> (to the extent that the partitioning cleanly combines)</details>.
+<br>If we assume a sub-problem's solution quality to be random, each participant is randomly sampling a qualities for their sub-problem solutions. Meanwhile, in a cooperative environment, we would be free to pick the best solution <details><summary>for each sub-problem</summary> (to the extent that the partitioning cleanly combines)</details>.
 <br>Also note that this option is just as readily available in a cooperative setting, where you can additionally access the combined experience of everyone else. It really just comes down to the competitive scenario being more likely to force several participants retreading the same steps.
 </li>
 <br>
