--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 <br>I've come across some aphoristic expressions of the form "competition breeds innovation". My best explanation for this rhetoric would be an underlying assumption that competition were a source of motivation for its participants.
 <br>However, the very dynamics of a competition mean that the focus is not on achieving the best result, but on achieving a better result than others. This incentivizes all tactics sabotaging the results of others, f.e. by misinformation or direct intervention with their progress.
 <br>It also directly disincentivizes actions that would help others, such as sharing solutions (even in part, or just general experience gained during the competition).
-<br>While the competition's rules may still pick <details><summary>the "best" solution provided by any one participant</summary> (- and even this alignment needs to be independently ensured, f.e. take socio-economic factors influencing consumers' decisions -)</details>, any such solution will quite obviously fall short of the solution that could have been achieved in a positive, cooperative environment: best_coop = best_comp + all improvements the other competitors could have provided to it.
+<br>While the competition's rules may still pick <details><summary>the "best" solution provided by any one participant</summary> (- and even this alignment needs to be independently ensured, f.e. consider socio-economic factors influencing consumers' decisions, which may be orthogonal to other measures of quality -)</details>, any such solution will quite obviously fall short of the solution that could have been achieved in a positive, cooperative environment: best_coop = best_comp + all improvements the other competitors could have provided to it.
 <br>
 <br>For completeness, I'll list the potential benefits (that come to my mind right now) a competitive environment may incidentally provide in a given scenario:
 <ol>
 <li>
 By reduced sharing of information, participants are required to re-invest efforts across the same sub-problems. This gives the opportunity of arriving at different solutions, which may differ in quality.
 <br>In direct contrast, note how this re-invested effort is drained here instead of being contributed to directly improving someone else's solution.
-<br>If we assume a sub-problem's solution quality to be random, each participant is randomly sampling a qualities for their sub-problem solutions. Meanwhile, in a cooperative environment, we would be free to pick the best solution <details><summary>for each sub-problem</summary> (to the extent that the partitioning cleanly combines)</details>.
+<br>If we assume a sub-problem's solution quality to be random, each participant is randomly sampling qualities for their sub-problem solutions. Meanwhile, in a cooperative environment, we would be free to pick the best solution <details><summary>for each sub-problem</summary> (to the extent that the partitioning cleanly combines)</details>.
 <br>Also note that this option is just as readily available in a cooperative setting, where you can additionally access the combined experience of everyone else. It really just comes down to the competitive scenario being more likely to force several participants retreading the same steps.
 </li>
 <br>
@@ -33,10 +33,10 @@ By reduced sharing of information, participants are required to re-invest effort
 A per-submission result-oriented reward structure is easier to implement for a competition than for a "cooperation" (cooperative project/event/venture).
 <br>This greatly favors the participants with the best solution(s), which may be seen as a benefit for these participants.
 <br>On the other hand, those rewards are allocated away from other participants, meaning it disincentivizes less-invested participants.
-<br>To me this seems to be a tradeoff between having fewer, heavier-invested participants vs having more, more-lightly-invested participants. (Note that the latter can be much more valuable for a cooperative setting than in a competitive one.)
+<br>To me this seems to be a tradeoff between having fewer, heavier-invested participants vs having more, more-lightly-invested participants. (Note that it is significantly easier for the latter to make valuable contributions in a cooperative setting than in a competitive one.)
 <br>
 <br>It's also interesting how this entire second point revolves around external rewards, which are orthogonal to the intrinsic reward of achieving the best end result.
-<br>Additionally, this only works as a motivation as long as the participants with the best solution(s) are being pressured by other participants - it doesn't incentivize any effort beyond achieving the reward structure's highest payout.
+<br>Additionally, this only works as motivation as long as the participants with the best solution(s) are being pressured by other participants - it doesn't incentivize any effort beyond achieving the reward structure's highest payout, both in depth (often no incentive for improving once you're in first place) and longevity (no incentive for maintenance if you only get a one-time reward for the state at the time).
 </li>
 </ol>
 </details>
